# Helper-for-Santa-Claus-C-Project-

./: CMakeLists.txt  Copil.cpp  Copil.h  CopilCuminte.cpp  CopilCuminte.h  CopilNeastamparat.cpp  CopilNeastamparat.h  Jucarie.cpp  Jucarie.h  JucarieClasica.cpp  JucarieClasica.h  JucarieEducativa.cpp  JucarieEducativa.h  JucarieElectronica.cpp  JucarieElectronica.h  JucarieModerna.cpp  JucarieModerna.h  Meniu.cpp  Meniu.h  README.md  main.cpp
