cmake_minimum_required(VERSION 3.20)
project(proiect_03)

set(CMAKE_CXX_STANDARD 14)

add_executable(proiect_03 main.cpp Jucarie.cpp Jucarie.h JucarieClasica.cpp JucarieClasica.h JucarieEducativa.cpp JucarieEducativa.h JucarieElectronica.cpp JucarieElectronica.h JucarieModerna.cpp JucarieModerna.h Copil.cpp Copil.h CopilCuminte.cpp CopilCuminte.h CopilNeastamparat.cpp CopilNeastamparat.h Meniu.cpp Meniu.h)